2007-09-07  Graham Cobb  <g+770@cobb.uk.net>

	* src/export.c (get_event): fix workround for
	bug in event_db_find_by_uid which returns empty 
	events when the UID does not exist
	(todo_db_item_to_tags): fix compilation warning

	* src/import.c: import categories for todos

2007-09-06  Graham Cobb  <g+770@cobb.uk.net>

	* src/main.c (gpesyncd_setup_databases), configure.ac, src/gpesyncd.h: 
	Initialise categories database

2007-07-18  Graham Cobb  <g+770@cobb.uk.net>

	* src/import.c (add_event): unref items returned from
	mimedir_vcal_get_event_list and mimedir_vcal_get_todo_list
	(see bug 8)

2007-07-07  Florian Boor <florian@linuxtogo.org>

	* Release version 2.0
	* configure.ac, gpe-dist.am: Use GPE source distribution bits.

2007-03-21  Graham Cobb <g+gpe@cobb.uk.net>

	* src/export.c, src/import.c, src/main.c: eliminate
	compilation warnings
	
2007-02-20  Graham Cobb <g+gpe@cobb.uk.net>

	* src/import.c, src/main.c, src/export.c: apply interim fixes
	to compile with new libeventdb interface (see bug 14)
	Note that real fixes to handle errors are still outstanding (bug 14)

2007-01-10  Graham Cobb <g+gpe@cobb.uk.net>
	
	* src/import.c: make add_event correctly handle modify operations

2007-01-09  Graham Cobb <g+gpe@cobb.uk.net>

	* src/main.c: fix calls to printf to stop problems with text
	containing "%".
	* src/gpesyncd.h: include config.h, do not define _GNU_SOURCE explicitly (makes
	--enable-vartmp configure option work which fixes "no space" error on Maemo)
	* configure.ac: Depend on version 0.11 or greater of libtododb and
	0.31 or greater of libeventdb.

2006-12-30  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Depend on version 0.20 or greater of libgpevtype.
	
2006-12-29  Neal H. Walfield  <neal@gnu.org>

	* src/export.c (todo_db_find_item_by_id): Move from here...
	* ../libtododb/todo-db.c: ... to here.

2006-12-29  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Call AC_GNU_SOURCE.  Require at least version 0.2
	of libgpevtype.